# strizer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: tokenizer.rs
examples/ebooler/: README.md  lexer.rs  main.rs  parser.rs
examples/file/: data.txt  main.rs
src/: lib.rs
