[package]
name = "strizer"
version = "0.1.0"
authors = ["Aleix Casanovas <aleics.casanovas@gmail.com>"]
repository = "https://github.com/aleics/strizer"
homepage = "https://github.com/aleics/strizer"
license = "MIT"
readme = "README.md"
description = "minimal and fast library for text tokenization"
edition = "2018"
